@@ -45,7 +45,7 @@ Definitions:
    modified in such a way shall still be considered the Standard Version.
 
 3. You may otherwise modify your copy of this Package in any way, provided
-   that you insert a prominent notice in the CHAGES file stating what
+   that you insert a prominent notice in the CHANGES file stating what
    changes were made and to what, and provided that you do at least ONE of
    the following:
 
@@ -96,6 +96,6 @@ Definitions:
 
 7. THIS PACKAGE IS PROVIDED "AS IS" AND WITHOUT ANY EXPRESS OR
    IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
-   WARRANTIES OF MERCHANTIBILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+   WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
 
                                 The End
